Added tests for Ollvanders2 main class